<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_warning_up"
        android:orientation="vertical"
        android:padding="@dimen/dimen_login_left">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@mipmap/icon_ok" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_login_left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_warning_default"
                android:textColor="@color/black"
                android:textSize="@dimen/s16p"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_warning_default2"
                android:textColor="@color/black"
                android:textSize="@dimen/s16p"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/dimen_login_left"

            android:text="@string/str_warning"
            android:textColor="@color/color_warn"
            android:textSize="@dimen/s16p" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/dimen_login_left"
            android:paddingTop="@dimen/dimen_mine_padding"
            android:text="@string/str_warning2"
            android:textColor="@color/color_warn"
            android:textSize="@dimen/s16p" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_warning_down"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/trans"
            android:text="@string/str_ok"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>