<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_login_bg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/fsoa_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_blue_reg"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/label_forget_sone"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_login_btn" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="@dimen/dimen_login_left"
                android:background="@color/color_view_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_login_left">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:gravity="center"
                    android:scaleType="centerInside"
                    android:src="@mipmap/icon_reg_phone"
                    android:text="@string/str_fsone_username"
                    android:textSize="@dimen/dimen_login_et" />

                <EditText
                    android:id="@+id/fsa_et_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:background="@color/trans"
                    android:hint="@string/str_reg_hint_phone"
                    android:maxLength="11"
                    android:textColorHint="@color/color_hint"
                    android:textSize="@dimen/dimen_login_et" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_view_line" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_login_left">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:gravity="center"
                    android:scaleType="centerInside"
                    android:src="@mipmap/icon_reg_phone"
                    android:text="@string/str_fsone_code"
                    android:textSize="@dimen/dimen_login_et" />

                <EditText
                    android:id="@+id/fsa_et_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@color/trans"
                    android:hint="@string/str_reg_hint_code"
                    android:textColorHint="@color/color_hint"
                    android:textSize="@dimen/dimen_login_et" />

                <Button
                    android:id="@+id/fsa_btn_get"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="3"
                    android:background="@color/color_blue_reg"
                    android:text="@string/str_reg_click_get"
                    android:textColor="@color/white" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_view_line" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
