<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/include_pay"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_view_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_login_left">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_ip_pay_amount" />


        <TextView
            android:text="0.00"
            android:id="@+id/ip_tv_pay_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/ip_tv_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/ip_tv_pay_amount"
            android:text="@string/str_pay_symbol"
            android:textColor="@color/red" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_view_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_dda_time"
        android:layout_marginLeft="@dimen/dimen_login_left"
        android:layout_marginTop="@dimen/dimen_dda_time"
        android:text="@string/str_pay_mothed" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_view_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <!--<RadioGroup-->
        <!--android:id="@+id/ip_radioGroup"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <RelativeLayout
            android:id="@+id/ip_rl_wx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_login_left">

            <ImageView
                android:id="@+id/ip_iv_wx"
                android:layout_width="@dimen/dimen_dda_down"
                android:layout_height="@dimen/dimen_dda_down"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_pay_wx" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_dda_time"
                android:layout_toRightOf="@id/ip_iv_wx"
                android:text="@string/str_ip_pay_mothed_wx"
                android:textColor="@color/color_home_menu_txt"
                android:textSize="@dimen/s16p" />

            <RadioButton
                android:id="@+id/ip_rb_wx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/pay_mothed"
                android:button="@null"
                android:checked="true" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_view_line" />

        <RelativeLayout
            android:id="@+id/ip_rl_alipay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_login_left">

            <ImageView
                android:id="@+id/ip_iv_alpay"
                android:layout_width="@dimen/dimen_dda_down"
                android:layout_height="@dimen/dimen_dda_down"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_pay_alpay" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_dda_time"
                android:layout_toRightOf="@id/ip_iv_alpay"
                android:text="@string/str_ip_pay_mothed_alpay"
                android:textColor="@color/color_home_menu_txt"
                android:textSize="@dimen/s16p" />

            <RadioButton
                android:id="@+id/ip_rb_alpay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/pay_mothed"
                android:button="@null" />
        </RelativeLayout>
        <!--</RadioGroup>-->


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_view_line" />


    <Button
        android:id="@+id/ip_btn_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_home_menu_txt"
        android:background="@color/color_pay_btn"
        android:text="@string/str_ip_pay_btn"
        android:textColor="@color/white"
        android:textSize="@dimen/s16p" />
</LinearLayout>
