<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hb.rimi.angel.activity.mine.MyOrderActivity">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#11A8BB"
        android:minHeight="?attr/actionBarSize">
        <ImageView
            android:id="@+id/iv_orderfinish"
            android:src="@mipmap/arrow"
            android:layout_width="30dp"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/str_mine_myorder"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/rg_order"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <RadioButton
                android:id="@+id/rb_ordering"
                android:gravity="center"
                android:text="@string/str_order_ing"
                android:background="@drawable/button_color"
                android:textColor="@drawable/text_color"
                android:button="@null"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />
            <RadioButton
                android:id="@+id/rb_ordering_down"
                android:textColor="@drawable/text_color"
                android:gravity="center"
                android:text="@string/str_order_ed"
                android:background="@drawable/button_color"
                android:button="@null"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />
        </RadioGroup>
    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/vp_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v4.view.ViewPager>
</LinearLayout>
