<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_login_bg"
    tools:context="com.hb.rimi.angel.activity.mine.ChangePhoneActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/change_phone_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#11A8BB"
        android:minHeight="?attr/actionBarSize">
        <ImageView
            android:id="@+id/iv_chanPhone_finish"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@mipmap/arrow"/>
        <TextView
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_login_btn"
            android:text="@string/str_mine_change_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>
    <View
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_view_line" />
    <LinearLayout
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_marginLeft="20dp"
            android:text="@string/str_la_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/color_hint"
            android:textSize="@dimen/dimen_login_et"/>
        <EditText
            android:id="@+id/et_newPhoneNum"
            android:inputType="number"
            android:layout_marginLeft="10dp"
            android:background="#ffffff"
            android:textColorHint="@color/color_hint"
            android:textSize="@dimen/dimen_login_et"
            android:hint="请输入新的手机号码"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_view_line"/>
    <LinearLayout
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_marginLeft="8dp"
            android:layout_gravity="center"
            android:text="@string/str_mine_chanPh_yanzheng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/color_hint"
            android:textSize="@dimen/dimen_login_et"/>
        <EditText
            android:id="@+id/et_getidentifyCode"
            android:inputType="number"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:background="#ffffff"
            android:textColorHint="@color/color_hint"
            android:textSize="@dimen/dimen_login_et"
            android:hint="请输入短信随机验证码"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:text="获取"
            android:id="@+id/btn_getidentifying"
            android:layout_marginLeft="15dp"
            android:textColor="#ffffff"
            android:background="@mipmap/btn_changepwd"
            android:layout_gravity="center"
            android:layout_width="60dp"
            android:layout_height="30dp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_view_line"/>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_marginLeft="20dp"
            android:text="@string/str_la_psd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/color_hint"
            android:textSize="@dimen/dimen_login_et"/>
        <EditText
            android:id="@+id/et_userPwd"
            android:layout_marginLeft="10dp"
            android:hint="请输入密码"
            android:textColorHint="@color/color_hint"
            android:textSize="@dimen/dimen_login_et"
            android:inputType="textPassword"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_view_line"/>
    <Button
        android:id="@+id/btn_chanPhone"
        android:text="@string/str_mine_affine_changePhone"
        android:textColor="#ffffff"
        android:background="@mipmap/btn_changepwd"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dimen_login_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
